# respysive-slide

./: LICENSE  README.md  pyproject.toml  readme_example.html  readme_example.py  requirements.txt
assets/css/: abm.css  abm1.css  abm2.css  abm3.css  efs.css  sorbone.css
respysive/: __init__.py  container.py  content.py  presentation.py  requirements.txt  utils.py
