[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "respysive-slide"
authors = [{name = "fbxyz"}]
description = "A Python package that allows you to create interactive presentations using Python, Bootstrap and Reveal.js. Charts from Altair and Plotly can also be added"

readme = "README.md"
version = "1.1.1"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
keywords = ["slide", "presentation", "reveal.js", "Bootstrap"]
requires-python = ">=3.7"

[tool.flit.module]
name = "respysive"

[project.optional-dependencies]
dev = ["ipython", "markdown"]

[project.urls]
Home = "https://github.com/fbxyz/respysive-slide"
